Closed Bug 714597 Opened 13 years ago Closed 13 years ago

GfxInfoCollector.h used in Thebes API depends on string internal api

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: daim.project, Assigned: daim.project)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:9.0.1) Gecko/20100101 Firefox/9.0.1
Build ID: 20111220165912

Steps to reproduce:

Compile external binary xpcom component linking with xul library and using Thebes api.



Actual results:

Compilation failed because gfx/thebes/gfxPlatform.h include GfxInfoCollector.h which require MOZILLA_INTERNAL_API by using explicit reference to nsPromiseFlatString.(which is only defined for MOZILLA_INTERNAL_API).



Expected results:

Compilation should have succeeded because Thebes is defined as an exportable api for use in external components.

The proposed patch replace the the const ref to nsPromiseFlatString with a const ref to nsString which is a base class of nsPromiseFlatString and is compatible with the typedef for PromiseFlatString defined in nsStringAPI.h .
Attachment #585264 - Attachment is patch: true
Assignee: nobody → daim.project
Attachment #585264 - Flags: review?(roc)
https://hg.mozilla.org/mozilla-central/rev/93d49e745ff7
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: