Bug 714597 - GfxInfoCollector.h used in Thebes API should not depend on internal string API. r=roc